Fix broken focus rect on IE11

--- a/home.css
+++ b/home.css
@@ -1,3 +1,7 @@
+html, body {
+  height: 100%;
+}
+
 body {
   max-width: 900pt;
   padding: 20pt;
